# family-scraper

./: .gitignore  family-scraper.py  pyproject.toml
family_scraper/: __init__.py  main.py
pkg/arch/: .gitignore  PKGBUILD
