[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "family-scraper"
authors = [{name = "Alberto Oporto", email = "alberto.oporto@utec.edu.pe"}]
license = {file = "LICENSE.md"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
	"selenium",
]

[project.urls]
Home = "https://github.com/otreblan/family-scraper"

[project.scripts]
family-scraper = "family_scraper.main:main"
